# OCRHelper

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindLibDL.cmake  FindLibLept.cmake  FindMySQLClient.cmake
data/: faller1.tiff
env/lib/: libPocoFoundation.so.48  libPocoJSON.so.48  libPocoJSONd.so.48  libPocoNet.so.48  libPocoUtil.so.48  libPocoUtild.so.48  libPocoXML.so.48  libPocoXMLd.so.48  libtesseract.la
env/lib/pkgconfig/: tesseract.pc
inc/: KeyValueParser.h  Logger.h  OcrEngine.h  OcradEngine.h
inc/db/: MariaDBConnector.h
inc/domain/: Delivery.h  DeliveryDetail.h  OcrInformation.h  Product.h
inc/engine/: TesseractEngine.h
inc/mock/: ExamplePolicy.h
inc/policy/: MatchSetting.h  MetaInformation.h  MetaInformationPolicy.h  OcrPolicy.h  StringMatchDirection.h
src/: KeyValueParser.cpp  Logger.cpp  OcradEngine.cpp  TesseractEngine.cpp
